@@ -4,7 +4,8 @@
 dialogfe (05 Jan 2005):
 
   23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Fixed crash bug if you cancel from the partition type selection menu.
+  Fixed crash bug if you cancel from the partition type selection menu. Added
+  timezone patch from zahna.
 
   21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Removed get_random_salt() function and replaced calls to crypt.crypt()
