@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.86 2005/03/22 05:13:08 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.87 2005/03/24 03:12:24 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added livecd-kernel option to Kernel.py.
 
   21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Reenabled 'emerge sync' option. Removed get_random_salt() function and
