@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.98 2005/03/22 18:49:12 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.99 2005/03/24 03:12:24 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added code to build_kernel() and emerge_kernel_sources() in ArchTemplate
+  to handle installing the livecd kernel into the new system.
 
   22 Mar 2005; Preston Cody <codeman@gentoo.org>
   should emerge hotplug and coldplug before adding them to runlevel.
